# pebble-stark

./: .gitignore  APACHE2  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  settings.yml
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: check.sh  check_test_fmt.sh  fmt.sh  lint.sh  test.sh
.github/workflows/: ci.yml  dependabot_automerge.yml
air/: Cargo.toml  README.md
air/src/: compile_time_optional.rs  lib.rs  test_utils.rs  trace.rs  trace_context.rs
air/src/boundary/: mod.rs
air/src/boundary_constraints/: mod.rs
air/src/fibonacci/: fibonacci_trace_context.rs  mod.rs
algebra/: Cargo.toml
algebra/src/: fields.rs  lib.rs
algebra/src/domains/: list_of_cosets.rs  mod.rs
algebra/src/fields/: big_prime_constants.rs  fraction_field_element.rs  prime_field_element.rs
algebra/src/polymorphic/: field_element_span.rs  field_element_vector.rs  mod.rs
composition_polynomial/: Cargo.toml
composition_polynomial/src/: lib.rs  multiplicative_neighbors.rs  periodic_column.rs
cryptography/: Cargo.toml
cryptography/src/merkle/: common_utils.rs  hash.rs  mod.rs  tree.rs
fft_utils/: Cargo.toml
fft_utils/src/: fft_bases.rs  lib.rs
math/: Cargo.toml
proof_system/: Cargo.toml
randomness/: Cargo.toml
randomness/src/: lib.rs  prng.rs
stark/: Cargo.toml
statement/: Cargo.toml
utils/src/: lib.rs
