[package]
name   ="air"
version="0.1.0"
edition="2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff                ="0.4.2"
algebra               ={ path="../algebra" }
composition_polynomial={ path="../composition_polynomial" }
