[package]
name   ="air"
version="0.1.0"
edition="2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff                ="0.4.2"
algebra               ={ path="../algebra" }
composition_polynomial={ path="../composition_polynomial" }

[dev-dependencies]
ark-std="0.4.0"
# todo: remove ark-test-curves eventually
ark-test-curves="0.4.2"
rand           ={ version="0.8.4", features=["std"] }
