[package]
name   ="algebra"
version="0.1.0"
edition="2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fft_utils={ path="../fft_utils" }

ark-ff     ="0.5.0"
num-bigint ="0.4.4"
lazy_static="1.4.0"
rand       ="0.8.5"
serde      ={ version="1.0", features=["derive"] }
